Fix alignment of traits when rarity not present

--- a/src/static/stylesheets/nft-details.scss
+++ b/src/static/stylesheets/nft-details.scss
@@ -513,7 +513,6 @@
     border-radius: var(--border-radius-component);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: 10px;
     text-align: center;
 
@@ -526,6 +525,7 @@
       font-size: 16px;
       font-weight: 500;
       padding: 15px 0;
+      flex-grow: 1;
     }
 
     &__rarity {
